<resources>
    <string name="app_name">Basic</string>
    <string name="hello">Holas mundos</string>
    <string name="name">Escribe tu nombre</string>
    <string name="sayHello">Saludar</string>
    <string name="imcApp">IMC App</string>
    <string name="male">Varón</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>

    <string name="error">ERROR</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!--TodoApp-->
    <string name="todo_title">Bienvenido, Danicode</string>
    <string name="todo_categories">Categorías:</string>
    <string name="todo_tasks">Tareas:</string>

    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_add_task_button">Crear tarea</string>
    <string name="todoApp">TODO APP</string>
    <string name="welcome">Bienvenido</string>
    <string name="test">PRUEBA</string>
    <string name="todo_radio_business">Negocio</string>
    <string name="superHeroApp">Super Hero APP</string>
    <string name="settingsApp">Settings</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="dark_mode_description">Activar modo oscuro para un cambio visual</string>
    <string name="on_bluetooth">Activar Bluetooth</string>
    <string name="on_bluetooth_description">Conectar periféricos inalámbricos</string>
    <string name="volume">Volumen</string>
    <string name="on_vibration">Vibrar en llamadas</string>
</resources>